# df-image-search-engine

./: .env.examples  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  tes.py
.github/workflows/: run_test.yaml
cache/: encoded_data_test_bastian.npy  encoded_data_test_bastian_105.npy
examples/: general.py
examples/tests/: test_general.py
images/: used_as_unit_testing.py
scripts/: init.sh  mount_nas.sh  run_server.sh  run_server_local.sh  run_server_prod.sh  run_test.sh  setup.sh  umount_nas.sh
src/: main.py  secret.py  train.py
src/database/: connection.py
src/schema/: format_data.py
tests/: test_auto_update_encoding.py  test_check_already_have_encoded_data.py  test_check_gpu_avaibility.py  test_check_gpu_memory.py  test_gpu_avaibility.py  test_grab_all_images.py  test_normalize_embeddings.py  test_preprocess_image.py  test_setup_sidebar.py  test_wrapper_queue_data.py
tests/helper/: test_grab_all_images.py  test_normalize_embeddings.py  test_preprocess_image.py  test_setup_sidebar.py  test_wrapper_queue_data.py
tests/validator/: test_check_already_have_encoded_data.py  test_check_gpu_avaibility.py  test_check_gpu_memory.py  test_check_multisearch.py
utils/: corpus.py  helper.py  logger.py  nas_connection.py  performance_test.py  schema.py  validator.py
